priv#440: workaround to determine field offsets of records